--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "mysql2": "^3.12.0",
     "next": "15.2.0",
     "react": "^19.0.0",
-    "nodemon": "^3.1.9",
     "react-dom": "^19.0.0"
   },
   "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
