--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "moment": "^2.30.1",
     "mysql2": "^3.12.0",
     "next": "15.2.0",
     "react": "^19.0.0",
