--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "nodemon index.js",
     "build": "react-scripts build",
-    "start": "next start",
+    "start": "node index.js",
     "dist": "electron-builder",
     "lint": "next lint"
   },
@@ -19,8 +19,9 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "moment": "^2.30.1",
-    "mysql2": "^3.12.0",
-    "next": "15.2.0",
+    "mysql2": "^3.14.0",
+    "next": "^15.3.1",
+    "nodemon": "^3.1.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -39,6 +40,7 @@
   "homepage": "https://github.com/HenriqueMNH/barbieriapp2#readme",
   "devDependencies": {
     "electron-builder": "^25.1.8",
+    "nodemon": "^22.14.0",
     "electron-packager": "^17.1.2"
   }
 }
