--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "nodemon page.js",
     "build": "react-scripts build",
-    "start": "node index.js",
+    "start": "node page.js",
     "dist": "electron-builder",
     "lint": "next lint"
   },
@@ -21,7 +21,6 @@
     "moment": "^2.30.1",
     "mysql2": "^3.14.0",
     "next": "^15.3.1",
-    "nodemon": "^3.1.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -40,7 +39,7 @@
   "homepage": "https://github.com/HenriqueMNH/barbieriapp2#readme",
   "devDependencies": {
     "electron-builder": "^25.1.8",
-    "nodemon": "^22.14.0",
-    "electron-packager": "^17.1.2"
+    "electron-packager": "^17.1.2",
+    "nodemon": "^3.1.10"
   }
 }
