--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon page.js",
-    "build": "react-scripts build",
-    "start": "node page.js",
-    "dist": "electron-builder",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint"
   },
   "build": {
@@ -19,13 +18,12 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "moment": "^2.30.1",
-    "mysql2": "^3.14.0",
+    "mysql2": "^3.14.1",
     "next": "^15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
-  "main": "index.js",
   "author": "",
   "license": "ISC",
   "repository": {
@@ -38,8 +36,6 @@
   },
   "homepage": "https://github.com/HenriqueMNH/barbieriapp2#readme",
   "devDependencies": {
-    "electron-builder": "^25.1.8",
-    "electron-packager": "^17.1.2",
     "nodemon": "^3.1.10"
   }
 }
