--- a/package.json
+++ b/package.json
@@ -3,17 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-<<<<<<< Updated upstream
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-=======
-    "dev": "nodemon main.js",
-    "build": "react-scripts build",
-    "start": "node main.js",
-    "dist": "electron-builder",
->>>>>>> Stashed changes
-    "lint": "next lint"
+    "start": "next start"
   },
   "build": {
     "win": {
@@ -31,10 +23,7 @@
     "react-dom": "^19.0.0"
   },
   "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
-<<<<<<< Updated upstream
-=======
   "main": "main.js",
->>>>>>> Stashed changes
   "author": "",
   "license": "ISC",
   "repository": {
