--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.8.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "mysql2": "^3.14.1",
     "next": "^15.3.1",
