--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     }
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.0",
     "axios": "^1.8.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
